fix menu and lang-switch height on small screens

--- a/assets/css/extended/header.css
+++ b/assets/css/extended/header.css
@@ -8,6 +8,13 @@
     }
 }
 
+@media screen and (max-width: 446px) {
+    .logo-switches,
+    #menu {
+        line-height: 50px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     :root {
         --header-height: 80px;
